--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,7 @@ description:         Please see the README on GitHub at <https://github.com/wayn
 
 dependencies:
 - base >= 4.7 && < 5
+- directory
 
 library:
   source-dirs: src
