--- a/void-service-manager.cabal
+++ b/void-service-manager.cabal
@@ -6,7 +6,7 @@ cabal-version: 1.12
 
 name:           void-service-manager
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/void-service-manager#readme>
+description:    Please see the README on GitHub at <https://github.com/waynevanson/void-service-manager#readme>
 homepage:       https://github.com/githubuser/void-service-manager#readme
 bug-reports:    https://github.com/githubuser/void-service-manager/issues
 author:         Author name here
@@ -32,6 +32,7 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , directory
   default-language: Haskell2010
 
 executable void-service-manager-exe
@@ -43,6 +44,7 @@ executable void-service-manager-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , directory
     , void-service-manager
   default-language: Haskell2010
 
@@ -56,5 +58,6 @@ test-suite void-service-manager-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , directory
     , void-service-manager
   default-language: Haskell2010
