--- a/void-service-manager.cabal
+++ b/void-service-manager.cabal
@@ -25,26 +25,35 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Data.DisjunctBool
+      VSM
   other-modules:
       Paths_void_service_manager
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      base
     , directory
+    , filepath
+    , text
+    , transformers
+    , unix
   default-language: Haskell2010
 
-executable void-service-manager-exe
+executable void-service-manager
   main-is: Main.hs
   other-modules:
       Paths_void_service_manager
   hs-source-dirs:
-      app
+      bin
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      base
     , directory
+    , filepath
+    , text
+    , transformers
+    , unix
     , void-service-manager
   default-language: Haskell2010
 
@@ -57,7 +66,11 @@ test-suite void-service-manager-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      base
     , directory
+    , filepath
+    , text
+    , transformers
+    , unix
     , void-service-manager
   default-language: Haskell2010
